@@ -184,7 +184,7 @@
 
 * Emulación de ZX Printer
 
-* Emulación de Lightgun: Casi perfecta emulación de Gunstick de MHT Ingenieros S.L y emulación experimental de Magnum Light Phaser
+* Emulación de Lightgun: Emula Gunstick de MHT Ingenieros S.L y Magnum Light Phaser
 
 * Emulación Kempston mouse
 
